[project]
name = "comfyui-fairlab"
description = "Utility, text, logic, and image helper nodes for ComfyUI with updated IO typing and safer script evaluation."
version = "1.0.91"
license = { text = "MIT" }
dependencies = [
    "googletrans",
    "opencv-python",
    "requests",
    "nest_asyncio",
    "perfect-pixel[opencv]>=0.1.4"
]

[project.urls]
Repository = "https://github.com/yanhuifair/ComfyUI-FairLab"

[tool.comfy]
PublisherId = "fffffair"
DisplayName = "ComfyUI-FairLab"
Icon = ""
